--- a/Assignment4/Part9/pom.xml
+++ b/Assignment4/Part9/pom.xml
@@ -109,7 +109,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>5.2.9.RELEASE</version>
+            <version>5.2.15</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
